Fix some styles : background color for default theme, fix fields alignment when using autocomplite control (for all themes)
git-svn-id: http://svn.bluexml.com/private/S-IDE@35437 c4e9bb49-730a-0410-b52d-bc9a0859fdfe

--- a/FrameworksModules/trunk/com.bluexml.side.Framework.alfresco.share.formExtension346E/src/main/resources/side/components/form/controls/autocomplete.css
+++ b/FrameworksModules/trunk/com.bluexml.side.Framework.alfresco.share.formExtension346E/src/main/resources/side/components/form/controls/autocomplete.css
@@ -2,3 +2,23 @@
 	width: 30em;
 	position: static;
 }
+
+.yui-skin-yellowTheme .yui-ac-input {
+	width: 30em;
+	position: static;
+}
+
+.yui-skin-gdocs .yui-ac-input {
+	width: 30em;
+	position: static;
+}
+
+.yui-skin-greenTheme .yui-ac-input {
+	width: 30em;
+	position: static;
+}
+
+.yui-skin-hcBlack .yui-ac-input {
+	width: 30em;
+	position: static;
+}
